--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 server:
-  port: 8080
+  port: 8000
 
 eureka:
   client:
-    serviceUrl:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
       defaultZone: http://localhost:8761/eureka/
 
 spring:
   application:
-    name: gateway-service
+    name: api-gateway
+  profiles:
+    active: routes
