--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,6 +13,8 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER_URI}
+  instance:
+    prefer-ip-address: true
 
 management:
   endpoint:
