--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-application-routes.yml
-application-jwt.yml
+local.env
 
 ### STS ###
 .apt_generated
