--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -20,6 +20,7 @@ jobs:
           echo "SERVER_IP=${{ secrets.SERVER_IP }}" >> $GITHUB_ENV
           echo "KAFKA_HOST=${{ secrets.KAFKA_HOST }}" >> $GITHUB_ENV
           echo "KAFKA_PORT=${{ secrets.KAFKA_PORT }}" >> $GITHUB_ENV
+        shell: bash
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
